--- a/templates/cv_mathis_le_gall.html
+++ b/templates/cv_mathis_le_gall.html
@@ -117,7 +117,8 @@
                             </div>
                             <div class="cv-objective">
                                 <p>I am an Applied Mathematics Engineer specialized in finance, currently working as an Equity Derivatives Structurer at Natixis.</p>
-                                <p>My ambition is to further develop my expertise in finance and pursue an international career in Equity Derivatives Trading through a V.I.E. program.</p>
+                                <p>My ambition is to further develop my expertise in finance and pursue an international career in Equity Derivatives (Structuring or Trading).</p>
+                                <p>I am extremely motivated to continue developing my expertise in this field.</p>
                             </div>
                         </div>
 
